Adicionado Fluxo de Refund e Widgets de parcelamentos

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -1,8 +1,26 @@
 PIX paid in 4x,PIX parcelado em 4x
 interest-free,sem juros
 4 fortnightly installments,4 parcelas quinzenais
-The first installment is paid on the spot, the other three,A primeira parcela é paga no ato, as outras três
+"the first installment is paid on the spot, the other three","A primeira parcela é paga no ato, as outras três"
 every 15 days,a cada 15 dias
 no card,Sem cartão
-Our installment is done by PIX, with approval in seconds,Nosso parcelamento é feito por PIX, com aprovação em segundos
+"our installment is done by pix, with approval in seconds","Nosso parcelamento é feito por PIX, com aprovação em segundos"
 Payment Information Additional,Informações de Pagamento adicionais
+"Credentials","Credenciais"
+"Refund Endpoint","URL de reembolso"
+"Capture Endpoint","Url de captura"
+"Payment Endpoint","Url de pagamento"
+"Checkout Endpoint","Url de checkout"
+"Token Endpoint","Url do token"
+"Installment in PIX","Parcele no PIX"
+"in 4x of","em 4x de"
+"Installment in 1+3 fortnightly","Parcelamento em 1+3 quinzenais"
+"interest-free","sem juros"
+"Registration and approval in 2 minutes","Cadastro e aprovação em 2 minutos"
+"PIX is required","É necessário ter PIX"
+"Just choose","É só escolher"
+"Pay PIX 4x interest free","Pagaleve PIX 4x sem juros"
+"on the payment page","na página de pagamento"
+"subject to approval","sujeito a aprovação"
+"Payment at PIX, without card","Parcele no PIX, sem cartão"
+"know more","saiba mais"
