Adicionado botão de integração de refund e ajustes widget

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -24,3 +24,5 @@ Payment Information Additional,Informações de Pagamento adicionais
 "subject to approval","sujeito a aprovação"
 "Payment at PIX, without card","Parcele no PIX, sem cartão"
 "know more","saiba mais"
+"Integrate to Pagaleve","Integrar com a Pagaleve"
+"Creditmemo integrated success","Reembolso integral com sucesso"
