Label botão de finalizar pedido, Adicionado data do release no pedido

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -26,3 +26,4 @@ Payment Information Additional,Informações de Pagamento adicionais
 "know more","saiba mais"
 "Integrate to Pagaleve","Integrar com a Pagaleve"
 "Creditmemo integrated success","Reembolso integral com sucesso"
+"Place Order at Pagaleve","Finalizar pagamento na Pagaleve"
