--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -27,3 +27,6 @@ Payment Information Additional,Informações de Pagamento adicionais
 "Integrate to Pagaleve","Integrar com a Pagaleve"
 "Creditmemo integrated success","Reembolso integral com sucesso"
 "Place Order at Pagaleve","Finalizar pagamento na Pagaleve"
+"Checkout ID","ID do checkout"
+"Payment ID","ID do pagamento"
+"Release Date","Expiração da autorização"
