--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -32,3 +32,4 @@ Payment Information Additional,Informações de Pagamento adicionais
 "Release Date","Expiração da autorização"
 "It was not possible to complete this transaction at this time, please try again in a few moments.","Não foi possível realizar essa transação nesse momento, por favor tente novamente em alguns instantes."
 "This transaction could not be performed, please contact Pagaleve","Não foi possível realizar essa transação, por favor entre em contato com a Pagaleve"
+"Retry deadline","Tempo para retentativas"
