--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -33,3 +33,5 @@ Payment Information Additional,Informações de Pagamento adicionais
 "It was not possible to complete this transaction at this time, please try again in a few moments.","Não foi possível realizar essa transação nesse momento, por favor tente novamente em alguns instantes."
 "This transaction could not be performed, please contact Pagaleve","Não foi possível realizar essa transação, por favor entre em contato com a Pagaleve"
 "Retry deadline","Tempo para retentativas"
+"Enabled Transparent Checkout","Habilitar Checkout Transparente"
+"Your payment will start soon, a pop-up will open to you complete the payment. Please wait.","Seu pagamento irá iniciar em breve, uma pop-up irá abrir para você completar o pagamento. Por favor aguarde."
