Pix a Vista Magento 2

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -35,3 +35,7 @@ Payment Information Additional,Informações de Pagamento adicionais
 "Retry deadline","Tempo para retentativas"
 "Enabled Transparent Checkout","Habilitar Checkout Transparente"
 "Your payment will start soon, a pop-up will open to you complete the payment. Please wait.","Seu pagamento irá iniciar em breve, uma pop-up irá abrir para você completar o pagamento. Por favor aguarde."
+"Pix UpFront","Pix à Vista"
+"PIX UpFront","PIX à Vista"
+"Pagaleve - PIX UpFront","Pagaleve - PIX à Vista"
+"Pagaleve - PIX paid in 4x","Pagaleve - PIX parcelado em 4x"
