Desenvolvimento de Webhook para Magento 2.4.6 (1.4.1)

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -39,3 +39,4 @@ Payment Information Additional,Informações de Pagamento adicionais
 "PIX UpFront","PIX à Vista"
 "Pagaleve - PIX UpFront","Pagaleve - PIX à Vista"
 "Pagaleve - PIX paid in 4x","Pagaleve - PIX parcelado em 4x"
+"Current Module Version: %1","Versão atual do módulo: %1"
