--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -40,3 +40,4 @@ Payment Information Additional,Informações de Pagamento adicionais
 "Pagaleve - PIX UpFront","Pagaleve - PIX à Vista"
 "Pagaleve - PIX paid in 4x","Pagaleve - PIX parcelado em 4x"
 "Current Module Version: %1","Versão atual do módulo: %1"
+"Payment Confirmed Status","Status de Pagamento Confirmado"
