--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -41,3 +41,4 @@ Payment Information Additional,Informações de Pagamento adicionais
 "Pagaleve - PIX paid in 4x","Pagaleve - PIX parcelado em 4x"
 "Current Module Version: %1","Versão atual do módulo: %1"
 "Payment Confirmed Status","Status de Pagamento Confirmado"
+"Secret Key","Chave Secreta"
